--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
         
         <dependency> 
             <groupId>org.springframework.boot</groupId> 
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <version>2.2.6.RELEASE</version>
+        </dependency>
+        
+        <dependency> 
+            <groupId>org.springframework.boot</groupId> 
             <artifactId>spring-boot-starter-validation</artifactId> 
         </dependency>
         
@@ -45,7 +52,7 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-       
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
