--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.servlet.context-path=/
+
 ## Database Properties
 spring.datasource.url = jdbc:postgresql://localhost:5432/votacao?createDatabaseIfNotExist=true
 spring.datasource.username = admin
@@ -8,3 +10,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+
+# Enabling OpenAPI Docs
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/swagger
+springdoc.swagger-ui.path=/swagger.html
+springdoc.pathsToMatch=/**
